changed lots of little things